infrastructure/kubernetes/staging/workers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workers 
  labels: 
    application: communities
    function: workers 
    environment: staging
spec:
  selector:
    matchLabels:
      application: communities
      function: workers 
      environment: staging
  replicas: 2
  template: 
    metadata:
      name: communities-workers-pod-template
      labels:
        application: communities
        function: workers 
        environment: staging
        container: worker 
    spec:
      terminationGracePeriodSeconds: 600 
      volumes:
        - name: workspace
          emptyDir:
            sizeLimit: 200M
      containers:
        - name: workers-container
          image: 843012963492.dkr.ecr.us-east-1.amazonaws.com/communities/worker:0.5.13
          resources:
            requests:
              cpu: 200m
              memory: 200M
          volumeMounts:
            - mountPath: '/src/tmp'
              name: workspace
